# stm32g4_lab

./: .gitignore  .gitmodules  Cargo.toml  Embed.toml  balance.fzz  phy.typ  readme.md  rust-toolchain.toml
common/: Cargo.toml
common/src/: cob.rs  codec.rs  lib.rs  num.rs
device/: Cargo.toml  attach.sh
device/.cargo/: config.toml
device/src/: fmt.rs  lib.rs
host/: Cargo.toml  setsuid.sh  start.sh
host/src/: main.rs
src/: lib.rs
ui/: Cargo.toml  start.sh
ui/src/: balance.rs  freq.rs  main.rs  meta.rs  misc.rs  sandbox.rs
