[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
framed = { version = "0.4.3", default-features = false }
futures-util = { version = "0.3.30", default-features = false }
postcard = { version = "1.0.8", features = ["use-defmt"] }
serde = { version = "1.0.203", features = ["derive"], default-features = false }
