[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bson = "2.11.0"
common = { version = "0.1.0", path = "../common" }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serialport = "4.3.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.11", features = ["full"] }
