[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
common = { version = "0.1.0", path = "../common" }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde-json-core = "0.5.1"
serde_json = "1.0.117"
serialport = "4.3.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serial = "5.4.4"
